--- a/src/components/recommendations/recommendations.module.scss
+++ b/src/components/recommendations/recommendations.module.scss
@@ -22,6 +22,7 @@
             &__inner {
                 display: flex;
                 gap: 30px;
+                padding: 1px;
 
                 .slide {
                     flex: 0 0 100%;
